--- a/src/app/servicios/servicios.page.html
+++ b/src/app/servicios/servicios.page.html
@@ -11,55 +11,74 @@
   <ion-card>
     <ion-card-header>
       <ion-card-title>Salud</ion-card-title>
-      <img alt="Silhouette of mountains" src="assets/icon/whatIs.png" />
+      <img alt="Silhouette of mountains" src="assets/icon/salud.png" />
     </ion-card-header>
   
     <ion-card-content>
-      Es el conjunto de Programas, proyectos, políticas y actividades que se orientan al desarrollo físico, psicoactivo, espiritual, cultural y estético de los estudiantes, docentes y personal administrativo”. Bienestar Institucional, es también esencia en la formación de personas integrales.
+      A continuación encontrará una breve descripción sobre esta sección o área de Bienestar Institucional de la Universidad Popular del Cesar, seccional Aguachica. Para el cumplimiento de sus objetivos, la Sección de Servicios Médicos y asistenciales contará con los siguientes programas: Promoción de la Salud y Prevención de la Enfermedad, Salud en el Trabajo, Consejería Psicológica y Orientación Profesional.
+      <ion-card-title>Objetivos</ion-card-title> 
+      <ul>
+        <li>Desarrollar programas de promoción y prevención en coordinación con otras dependencias, sobre estudios epidemiológicos, de condiciones de vida y enfermedades infectas contagiosas con riesgo de afectar la salud de la comunidad Académica.</li>
+        <li>Suscribir convenios con entidades de salud de orden municipal y departamental y con entes especializados para mejorar y ampliar la prestación de servicios en laboratorios clínicos, ínter consultas, seguros médicos y de accidentes, vacunación etc., garantizando una adecuada y eficiente prestación de los mismos.</li>
+        <li>Promover el desarrollo del nivel competitivo de los deportistas y equipos de representación de la Universidad, fomentando la disciplina y el esfuerzo personal y colectivo, en el impulso del deporte Inter-universitario.</li>
+      </ul>
     </ion-card-content>
   </ion-card>
 
   <ion-card>
     <ion-card-header>
       <ion-card-title>Cultura</ion-card-title>
-      <img alt="Silhouette of mountains" src="assets/icon/whatIs.png" />
+      <img alt="Silhouette of mountains" src="assets/icon/danza.png" />
     </ion-card-header>
   
     <ion-card-content>
-      Es el conjunto de Programas, proyectos, políticas y actividades que se orientan al desarrollo físico, psicoactivo, espiritual, cultural y estético de los estudiantes, docentes y personal administrativo”. Bienestar Institucional, es también esencia en la formación de personas integrales.
+      A continuación encontrará una breve descripción sobre esta sección o área de Bienestar Institucional de la Universidad Popular del Cesar, seccional Aguachica
+      <ion-card-title>Objetivos</ion-card-title> 
+      <ul>
+        <li>Propiciar y fomentar la participación de estudiantes, docentes, funcionarios y egresados de la Universidad en las actividades culturales, folclóricas y artísticas que se desarrollen.</li>
+        <li>Desarrollar eventos, seminarios o encuentros en los que se promueva la reflexión, los intercambios, el análisis o la expresión de aspectos relevantes de la cultura, como complemento de las actividades académicas.</li>
+        <li>Desarrollar programas de investigación cultural en aquellas áreas que complementen la visión formativa de la Universidad.</li>
+        <li>Divulgar las manifestaciones culturales de la Universidad.</li>
+      </ul>
     </ion-card-content>
   </ion-card>
 
   <ion-card>
     <ion-card-header>
       <ion-card-title>Deporte</ion-card-title>
-      <img alt="Silhouette of mountains" src="assets/icon/whatIs.png" />
+      <img alt="Silhouette of mountains" src="assets/icon/futbol.png" />
     </ion-card-header>
   
     <ion-card-content>
-      Es el conjunto de Programas, proyectos, políticas y actividades que se orientan al desarrollo físico, psicoactivo, espiritual, cultural y estético de los estudiantes, docentes y personal administrativo”. Bienestar Institucional, es también esencia en la formación de personas integrales.
+      A continuación encontrará una breve descripción sobre esta sección o área de Bienestar Institucional de la Universidad Popular del Cesar, seccional Aguachica. Para el cumplimiento de sus objetivos, la Sección de Deporte y recreación estructurará internamente los siguientes programas de Deporte: Formativo, Competitivo y Recreativo.
+      <ion-card-title>Objetivos</ion-card-title> 
+      <ul>
+        <li>Incentivar la práctica de las actividades física y deportivas como estrategias para mejorar la calidad de vida de los miembros de la comunidad universitaria con miras a fortalecer la salud, aumentar la capacidad física del organismo y buscar un equilibro entre mente y cuerpo.</li>
+        <li>Propiciar y fortalecer la práctica del deporte recreativo entre los miembros de la comunidad universitaria con el propósito de facilitar la integración.</li>
+        <li>Promover el desarrollo del nivel competitivo de los deportistas y equipos de representación de la Universidad, fomentando la disciplina y el esfuerzo personal y colectivo, en el impulso del deporte Inter-universitario.</li>
+        <li>Gestionar la dotación de los implementos y materiales necesarios para la práctica del deporte en la Universidad ante las instancias correspondientes y los recursos necesarios para la representación decorosa de nuestros deportistas en los eventos de carácter local regional, nacional e internacional.</li>
+        <li>El desarrollo de programas y jornadas de integración a la comunidad universitaria que fomenten la práctica deportiva y recreativa.</li>
+      </ul>
     </ion-card-content>
   </ion-card>
 
   <ion-card>
     <ion-card-header>
       <ion-card-title>PEBI</ion-card-title>
-      <img alt="Silhouette of mountains" src="assets/icon/whatIs.png" />
+      <ion-card-subtitle>PERMANENCIA Y BIENESTAR INSTITUCIONAL</ion-card-subtitle>
+      <img alt="Silhouette of mountains" src="assets/icon/PEBI.png" />
     </ion-card-header>
   
     <ion-card-content>
-      Es el conjunto de Programas, proyectos, políticas y actividades que se orientan al desarrollo físico, psicoactivo, espiritual, cultural y estético de los estudiantes, docentes y personal administrativo”. Bienestar Institucional, es también esencia en la formación de personas integrales.
-    </ion-card-content>
-  </ion-card>
-
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Servicio Social</ion-card-title>
-      <img alt="Silhouette of mountains" src="assets/icon/whatIs.png" />
-    </ion-card-header>
-  
-    <ion-card-content>
-      Es el conjunto de Programas, proyectos, políticas y actividades que se orientan al desarrollo físico, psicoactivo, espiritual, cultural y estético de los estudiantes, docentes y personal administrativo”. Bienestar Institucional, es también esencia en la formación de personas integrales.
+      La estrategia fundamental para la creación del programa de permanencia y graduación en la Universidad Popular del Cesar, que lleva por nombre Permanencia y Bienestar Institucional – PEBI, está enmarcado en el desarrollo del “Acuerdo Nacional para disminuir la deserción estudiantil en educación superior”, el cual compromete tres ejes fundamentales: el fortalecimiento de la financiación de la educación superior.
+      <p>Para desarrollar el anterior objetivo y los procesos asociados a él, la Universidad Popular del Cesar seccional Aguachica promueve la ejecución de los siguientes programas ó líneas:</p>
+      <ul>
+        <li>Programa de Orientación Vocacional y Adaptación Universitaria (POVAU)</li>
+        <li>Programa de Orientación Académica. (POA)</li>
+        <li>Programa de Orientación Psicosocial (POPS)</li>
+        <li>Observatorio de Permanencia y Alertas Tempranas (OPAT)</li>
+        <li>Escuela de Padres de Familia “Unidos en permanencia y convivencia”</li>
+      </ul>
     </ion-card-content>
   </ion-card>
 </ion-content>
