--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,9 +28,9 @@
           <ion-label>Servicios</ion-label>
         </ion-tab-button>
     
-        <ion-tab-button tab="registro">
-          <ion-icon name="newspaper"></ion-icon>
-          <ion-label>Formulario</ion-label>
+        <ion-tab-button tab="menu">
+          <ion-icon name="cafe"></ion-icon>
+          <ion-label>Menú</ion-label>
         </ion-tab-button>
       </ion-tab-bar>
     </ion-tabs>
