--- a/src/app/menu/menu.page.scss
+++ b/src/app/menu/menu.page.scss
@@ -5,9 +5,13 @@ ion-title{
     color: #fff;
 }
 ion-card{
-    position: relative;
+    width: 90%;
+    // position: relative;
+    // display: flex;
     text-align:justify;
     border-radius: 15px;
+    // margin-right: 15px;
+    
 }
 ion-card-title{
     text-align: center;
@@ -26,3 +30,44 @@ font-size: 40px;
 align-items:flex-end;
 justify-content: center;
 }
+
+ion-content{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+}
+
+// ion-modal{
+//     display: flex;
+//     align-items: center;
+// }
+
+
+
+
+// ion-modal#example-modal{
+//     --width: fit-content;
+//     --min-width: 250px;
+//     --height: fit-content;
+//     --border-radius: 6px;
+//     --box-shadow: 0 28px 48px rgba(0, 0, 0, 0.4);
+// }
+  
+// ion-modal#example-modal h1 {
+//     margin: 20px 20px 10px 20px;
+// }
+  
+// ion-modal#example-modal ion-icon {
+//     margin-right: 6px;
+  
+//     width: 48px;
+//     height: 48px;
+  
+//     padding: 4px 0;
+  
+//     color: #aaaaaa;
+// }
+  
+
+    
