--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,20 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+::-webkit-scrollbar,
+*::-webkit-scrollbar {
+display: none;
+}
+
+ion-content{
+    --offset-bottom: auto!important;
+  --overflow: hidden;
+  overflow: auto;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  background: rgb(246, 244, 243);
+
+}
