--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Login</ion-title>
+    <ion-title>Bienvenido</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -18,7 +18,7 @@
       </ion-item>
   </form> -->
 
-  <ion-card >
+  <!-- <ion-card >
     <ion-item>
       <ion-label position="floating">Email</ion-label>
       <ion-input type="email" ></ion-input>
@@ -32,5 +32,9 @@
 
   <ion-item>
     <ion-button (click)="ingresar()">Ingresar</ion-button>
-  </ion-item>
+  </ion-item> -->
+
+  <div class="container">
+    <img src="../../assets/bienvenido.jpeg" alt="">
+  </div>
 </ion-content>
