--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -16,13 +16,13 @@
     </ion-item>
 
   <ion-item>
-    <ion-label position="floating">Nombre</ion-label>
+    <ion-label position="stacked">Nombre</ion-label>
     <ion-input type="text"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label>Selecciona tu rol:</ion-label>
-    <ion-select label="Rol" label-placement="floating" fill="Rol" style="text-align: center;">
+    <ion-select label="Rol" label-placement="floating" fill="Rol" style="text-align: center;" placeholder="Seleccione uno">
       <ion-select-option value="estudiante">Estudiante</ion-select-option>
       <ion-select-option value="docente">Docente</ion-select-option>
       <ion-select-option value="administrativo">Administrativo</ion-select-option>
@@ -45,7 +45,7 @@
     </ion-buttons>
   </ion-item>
   <br>
-  <ion-button expand="block" type="submit">Enviar</ion-button>
+
 </form>
 
 <!-- Desayunos -->
@@ -298,4 +298,11 @@
   </ng-template>
 </ion-modal>
 <!-- Comidas -->
+
+<ion-item>
+  <ion-label class="espaciado" position="floating">Fecha de reserva</ion-label>
+  <ion-input type="date"></ion-input>
+</ion-item>
+
+<ion-button expand="block" type="submit">Enviar</ion-button>
 </ion-content>
