--- a/src/app/menu/menu.page.scss
+++ b/src/app/menu/menu.page.scss
@@ -38,36 +38,20 @@ ion-content{
 
 }
 
+
+
 // ion-modal{
 //     display: flex;
 //     align-items: center;
 // }
 
+.espaciado{
+    margin-bottom: 15px;
+}
 
-
-
-// ion-modal#example-modal{
-//     --width: fit-content;
-//     --min-width: 250px;
-//     --height: fit-content;
-//     --border-radius: 6px;
-//     --box-shadow: 0 28px 48px rgba(0, 0, 0, 0.4);
-// }
-  
-// ion-modal#example-modal h1 {
-//     margin: 20px 20px 10px 20px;
-// }
-  
-// ion-modal#example-modal ion-icon {
-//     margin-right: 6px;
-  
-//     width: 48px;
-//     height: 48px;
-  
-//     padding: 4px 0;
-  
-//     color: #aaaaaa;
-// }
-  
-
+ion-item{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 15px;
+}
     
