--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -70,7 +70,7 @@
           1 rebanada de pan de hogaza, 1 aguacate maduro, 
           1 lata de anchoas en aceite, 4 tomates cherry y cebollino fresco.
         </ion-card-content>
-        <ion-button (click)="setOpen(false)">Pagar</ion-button>
+        <ion-button (click)="setClose(false, '1')">Pagar</ion-button>
       </ion-card>
 
       <ion-card class="card">
@@ -84,7 +84,7 @@
           1 mozzarella fresca, 4 lonchas de mortadela de Bolonia, 
           aceite de oliva virgen extra, alcaparras, pimienta negra molida y sal gorda.
         </ion-card-content>
-        <ion-button (click)="setOpen(false)">Pagar</ion-button>
+        <ion-button (click)="setClose(false , '2')">Pagar</ion-button>
       </ion-card>
 
       <ion-card class="card">
@@ -98,7 +98,7 @@
           1 cucharada de almendra molida, 1/2 cucharadita de sal, 
           pimienta negra y especias o hierbas.
         </ion-card-content>
-        <ion-button (click)="setOpen(false)">Pagar</ion-button>
+        <ion-button (click)="setClose(false, '3')">Pagar</ion-button>
       </ion-card>
 
       <ion-card class="card">
@@ -113,7 +113,7 @@
           300 g de harina de fuerza, 90 g de harina integral, 
           1 cucharadita de sal.
         </ion-card-content>
-        <ion-button (click)="setOpen(false)">Pagar</ion-button>
+        <ion-button (click)="setClose(false, '4')">Pagar</ion-button>
       </ion-card>
 
       
@@ -127,7 +127,7 @@
         1 yogur natural o de limón, 1 medida de aceite, 2 medidas de azúcar, 3 medidas de harina de 
         repostería, 1/2 sobre de levadura (8 g), 3 huevos, ralladura de limón opcional.
       </ion-card-content>
-      <ion-button (click)="setOpen(false)">Pagar</ion-button>
+      <ion-button (click)="setClose(false, '5')">Pagar</ion-button>
     </ion-card>
     </ion-content>
   </ng-template>
