--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,24 +1,16 @@
+ion-toolbar{
+    background-color: var(--ion-color-danger);
+}
+ion-title{
+    color: #fff;
+}
 ion-content{
-    // height: 100%;
-    // background-image: url('../../assets/bienvenido.jpeg');
-    border: solid 1px red;
-    height: 100%;
-}
-
-img{
-    height: 100%;
-    border: solid 1px rgb(6, 46, 226);
-}
-
-.container{
-    width: 100%;
-    height: 100vh;
-    border: solid 1px red;
+    background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
-ion-title{
-    text-align: center;
+img {
+    width: 100%;
+    height: 450px;
 }
