--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -316,6 +316,9 @@
   <!-- Comidas -->
 
   <div class="centrar-boton">
-    <ion-button  class="ancho" expand="block" type="submit" (click)="enviar()">Ordenar</ion-button>
+    <!-- <ion-button   expand="block" type="submit" >Ordenar</ion-button> -->
+    <i class="ancho" (click)="enviar()">Ordenar</i>
   </div>
+
+  
 </ion-content>
