--- a/src/app/menu/menu.page.scss
+++ b/src/app/menu/menu.page.scss
@@ -41,3 +41,29 @@ ion-item{
     border-radius: 15px;
 }
 
+.centrar-boton{
+    position: relative;
+}
+
+.ancho{
+    margin-left: 8px;
+    margin-top: 45px;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    background: var(--ion-color-primary);
+    color: white;
+    width: 95%;
+    height: 45px;
+    border-radius: 10px;
+    text-decoration: none;
+    padding-top: 15px;
+}
+
+.ancho:hover{
+    background: var(--ion-color-danger);
+}
+
+.ancho:active{
+    background: rgb(8, 189, 8);
+}
