--- a/src/app/contacto/contacto.page.html
+++ b/src/app/contacto/contacto.page.html
@@ -7,268 +7,77 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <ion-accordion-group>
-    <ion-accordion value="first">
-      <ion-item slot="header">
-        <ion-label>Presidencia</ion-label>
-      </ion-item>
-      <div class="ion-padding" slot="content">
-        <ion-list>
-          <ion-item>
-            <ion-label>
-              <h2>Maria Teresa Hernandez Prada</h2>
-              <h3>Presidenta Ejecutiva</h3>
-              <p>(095) 5650650</p>
-              <p>mariah@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Elines Mercedes Chiquillo Paterna</h2>
-              <h3>Servicio General</h3>
-              <p>(095) 5650650</p>
-              <p>echiquillo@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item lines="none">
-            <ion-label>
-              <h2>Mary Luz Nuñez Sierra</h2>
-              <h3>Control Interno</h3>
-              <p>(095) 5650650</p>
-              <p>controlinterno@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-        </ion-list>
-      </div>
-    </ion-accordion>
-    <ion-accordion value="second">
-      <ion-item slot="header">
-        <ion-label>Dirección financiera</ion-label>
-      </ion-item>
-      <div class="ion-padding" slot="content">
-        <ion-list>
-          <ion-item>
-            <ion-label>
-              <h2>Lud Pabon Chona</h2>
-              <h3>Directora Administrativa y Financiera</h3>
-              <p>(095) 5650650</p>
-              <p>udpabon@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Piedad Hortencia Cardenas Castro</h2>
-              <h3>Cajera</h3>
-              <p>(095) 5650650</p>
-              <p>pcardenas@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item >
-            <ion-label>
-              <h2>Zoraida Mena Duarte</h2>
-              <h3>Cajera</h3>
-              <p>(095) 5650650</p>
-              <p>zmena@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item lines="none">
-            <ion-label>
-              <h2>Diana Patricia Navarro Julio</h2>
-              <h3>Contadora</h3>
-              <p>(095) 5650650</p>
-              <p>dnavarro@camaraaguachica.org.co </p>
-            </ion-label>
-          </ion-item>
-        </ion-list>
-      </div>
-    </ion-accordion>
-    <ion-accordion value="third">
-      <ion-item slot="header">
-        <ion-label>Dirección jurídica</ion-label>
-      </ion-item>
-      <div class="ion-padding" slot="content">
-        <ion-list>
-          <ion-item>
-            <ion-label>
-              <h2>Juan Bautista Granados Olivera</h2>
-              <h3>director Juridico</h3>
-              <p>(095) 5650650</p>
-              <p>centroc@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Yamile Vega</h2>
-              <h3>Asistente de Registros Publicos</h3>
-              <p>(095) 5650650</p>
-              <p>yvega@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Miladis Vasquez Nadjar</h2>
-              <h3>Auxiliar de Archivo</h3>
-              <p>(095) 5650650</p>
-              <p>mvasquez@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Marleth Ñungo Chavez</h2>
-              <h3>Auxiliar de Archivo</h3>
-              <p>(095) 5650650</p>
-              <p>mnungo@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Nadia Karime Ramirez Bayed</h2>
-              <h3>Asesora jurídica</h3>
-              <p>(095) 5650650</p>
-              <p>nramirez@camaraaguachica.org.co </p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Isaac Burgos Espinoza</h2>
-              <h3>Asistente de Sistemas</h3>
-              <p>(095) 5650650</p>
-              <p>sistemascca@camaraaguahica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Yoelis Perez Pabon</h2>
-              <h3>Auxiliar de Archivo</h3>
-              <p>(095) 5650650</p>
-              <p>yperez@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Camilo Valeides Hernandez</h2>
-              <h3>Ingeniero de Sistemas</h3>
-              <p>(095) 5650650</p>
-              <p>sistemascca@camaraaguahica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Jhonnys Vallejo Mendoza</h2>
-              <h3>Auxiliar de Registro</h3>
-              <p>(095) 5650650</p>
-              <p>ccsantarosa@camaraaguachica.og.co </p>
-            </ion-label>
-          </ion-item>
-          <ion-item lines="none">
-            <ion-label>
-              <h2>Nicol Gualdron Ortiz</h2>
-              <h3>Auxiliar de Archivo</h3>
-              <p>(095) 5650650</p>
-              <p>digitacion@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-        </ion-list>
-      </div>
-    </ion-accordion>
-    <ion-accordion value="Fourth">
-      <ion-item slot="header">
-        <ion-label>Dirección administrativa</ion-label>
-      </ion-item>
-      <div class="ion-padding" slot="content">
-        <ion-list>
-          <ion-item>
-            <ion-label>
-              <h2>Fidelia Moreno Garcia</h2>
-              <h3>Servicios Generales</h3>
-              <p>(095) 5650650</p>
-              <p>fmoreno@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Martha Quitana Garcia</h2>
-              <h3>Text Item</h3>
-              <p>(095) 5650650</p>
-              <p>mquintana@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Elsido Lopez</h2>
-              <h3>Auxiliar</h3>
-              <p>(095) 5650650</p>
-              <p>elopez@camaraaguachica.org.co </p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Myleidis Fonseca Fonseca</h2>
-              <h3>Talento Humano</h3>
-              <p>(095) 5650650</p>
-              <p>mfonseca@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Yuri Gonzales Davila</h2>
-              <h3>Auxiliar Administrativa</h3>
-              <p>(095) 5650650</p>
-              <p>ygonzalez@camaraaguachica.org.co </p>
-            </ion-label>
-          </ion-item>
-          <ion-item lines="none">
-            <ion-label>
-              <h2>Manuel Fajardo Sanchez</h2>
-              <h3>Auxiliar</h3>
-              <p>(095) 5650650</p>
-              <p>mfajardo@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-        </ion-list>
-      </div>
-    </ion-accordion>
-    <ion-accordion value="Fifth">
-      <ion-item slot="header">
-        <ion-label>Dirección desarrollo y competitividad</ion-label>
-      </ion-item>
-      <div class="ion-padding" slot="content">
-        <ion-list>
-          <ion-item>
-            <ion-label>
-              <h2>Mileidi Paez Meneses</h2>
-              <h3>Brigadista</h3>
-              <p>(095) 5650650</p>
-              <p>mpaez@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Yulieth Cacerez Pineda</h2>
-              <h3>Direccion Desarrollo</h3>
-              <p>(095) 5650650</p>
-              <p>Detail set to true</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>
-              <h2>Ernesto Jacome Sanguino</h2>
-              <h3>Direccion Desarrollo</h3>
-              <p>(095) 5650650</p>
-              <p>comunicaciones@camaraaguachica.org.co </p>
-            </ion-label>
-          </ion-item>
-          <ion-item lines="none" >
-            <ion-label>
-              <h2>Victor Puentes Pineda</h2>
-              <h3>Direccion Desarrollo</h3>
-              <p>(095) 5650650</p>
-              <p>vpineda@camaraaguachica.org.co</p>
-            </ion-label>
-          </ion-item>
-        </ion-list>
-      </div>
-    </ion-accordion>
-  </ion-accordion-group>
+<ion-content>
+  <h1>Psicologos UPC</h1>
+  <ion-card>
+    <img alt="Silhouette of mountains" src="../../assets/edith.jpg" />
+    <ion-card-header>
+      <ion-card-title>Edith Uribe</ion-card-title>
+      <ion-card-subtitle>Docente y Psicóloga PEBI</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Responsable de brindar apoyo emocional y psicológico a los estudiantes, especialmente en situaciones donde puedan surgir conflictos culturales o de adaptación.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <img alt="Silhouette of mountains" src="../../assets/carolina.jpg" />
+    <ion-card-header>
+      <ion-card-title>Carolina Garcia Fernández</ion-card-title>
+      <ion-card-subtitle>Psicóloga, Bienestar Institucional</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Función como psicóloga de Bienestar Institucional es contribuir a la creación de un ambiente escolar saludable y seguro para todos los miembros de la comunidad educativa, en el que se fomente el desarrollo integral de los estudiantes y se brinde apoyo emocional y psicológico a quienes lo necesiten.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <img alt="Silhouette of mountains" src="../../assets/breatriz.jpg" />
+    <ion-card-header>
+      <ion-card-title> Breatriz Arias</ion-card-title>
+      <ion-card-subtitle>Docente y Psicóloga PEBI</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Responsable de brindar apoyo emocional y psicológico a los estudiantes, especialmente en situaciones donde puedan surgir conflictos culturales o de adaptación.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <img alt="Silhouette of mountains" src="../../assets/carina.jpg" />
+    <ion-card-header>
+      <ion-card-title>Carina Liliana Brito</ion-card-title>
+      <ion-card-subtitle>Psicóloga, PEBI</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Tu función es fundamental para promover el desarrollo emocional y social de los estudiantes y para contribuir al fortalecimiento del ambiente escolar en el que se desenvuelven.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <img alt="Silhouette of mountains" src="../../assets/jose.jpg" />
+    <ion-card-header>
+      <ion-card-title>José Luis Olarte</ion-card-title>
+      <ion-card-subtitle>Psicologo,Docente Líder POPS y Psicólogo PEBI</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      (Programa de Orientación y Prevención en Salud) y un psicólogo PEBI (Programa de Educación en Bienestar Integral) tienen roles importantes en el desarrollo emocional, social y físico de los estudiantes.
+    </ion-card-content>
+  </ion-card>
+
+
+  <ion-card>
+    <img alt="Silhouette of mountains" src="../../assets/merly.jpg" />
+    <ion-card-header>
+      <ion-card-title>Merly Tatiana Angarita</ion-card-title>
+      <ion-card-subtitle>Psicóloga, PEBI</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Responsable de brindar apoyo emocional y psicológico a los estudiantes, especialmente en situaciones donde puedan surgir conflictos culturales o de adaptación.    </ion-card-content>
+  </ion-card>
 </ion-content>
